Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Shipper 'bọt bèo' trong thời thương mại điện tử",
+    "content": "Bài viết phản ánh thực trạng khó khăn của các tài xế giao hàng (shipper) trong lĩnh vực thương mại điện tử tại Việt Nam, khi họ chủ yếu nhận thù lao thấp và không có hợp đồng lao động chính thức. Nhiều shipper làm việc mà không có bảo hiểm hay các phúc lợi xã hội, khiến họ phải đối mặt với nhiều rủi ro trong công việc. Dù có một số nghiệp đoàn được thành lập để hỗ trợ, nhưng các quyền lợi của họ vẫn chưa được bảo vệ một cách hiệu quả, dẫn đến tình trạng bấp bênh trong nghề nghiệp.",
+    "link": "https://tuoitre.vn/shipper-bot-beo-trong-thoi-thuong-mai-dien-tu-20250316153717076.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tình trạng của các shipper trong thương mại điện tử hiện nay như thế nào?",
+    "answers": [
+      {
+        "text": "Họ gặp khó khăn về thu nhập và không có hợp đồng lao động.",
+        "correct": true
+      },
+      {
+        "text": "Họ có mức thu nhập ổn định và đầy đủ phúc lợi.",
+        "correct": false
+      },
+      {
+        "text": "Họ luôn được bảo vệ quyền lợi bởi các nghiệp đoàn.",
+        "correct": false
+      },
+      {
+        "text": "Họ không phải làm việc nhiều giờ mỗi ngày.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ trục xuất cầu thủ xăm biểu tượng Real Madrid",
     "content": "Cầu thủ bóng đá Jerce Reyes Barrios, 26 tuổi, đã bị trục xuất khỏi Mỹ do bị cáo buộc là thành viên băng đảng bạo lực, liên quan đến hình xăm biểu tượng Real Madrid của anh. Dù đã có phiên điều trần về nhập cư, anh cùng hơn 200 người khác đã bị đưa về El Salvador vào ngày 15/3/2025. Luật sư của Barrios khẳng định hình xăm của anh chỉ mang ý nghĩa bóng đá và gia đình, không liên quan đến băng đảng. Quyết định trục xuất này đã gây ra nhiều tranh cãi và phản đối từ gia đình và luật sư của anh.",
     "link": "https://vnexpress.net/my-truc-xuat-cau-thu-xam-bieu-tuong-real-madrid-4863991.html",
@@ -577,63 +604,32 @@
     ]
   },
   {
-    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
-    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
-    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
-    "cat": "giai-tri",
+    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
+    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
+    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
+    "cat": "thoi-su",
     "positivity": 7,
-    "importance": 6,
-    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
-    "answers": [
-      {
-        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
-        "correct": true
-      },
-      {
-        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
-        "correct": false
-      },
-      {
-        "text": "IU chuẩn bị ra mắt album mới",
-        "correct": false
-      },
-      {
-        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
-        "correct": false
-      },
-      {
-        "text": "Tất cả các diễn viên đều nghỉ hưu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mẹ phải yêu mình, trước khi yêu bố và con\": Nam sinh gây sốt vì quá tâm lý",
-    "content": "Nam sinh Wang Nanhao (16 tuổi) từ Ninh Ba, Trung Quốc, đã gây sốt trên mạng với thông điệp khuyến khích mẹ yêu bản thân trước khi yêu thương chồng và con cái. Wang nhận thấy mẹ thường hy sinh nhu cầu cá nhân để lo cho gia đình và khuyên bà nên ưu tiên chăm sóc bản thân hơn. Cậu cũng chia sẻ về những ký ức đẹp khi học đàn cùng mẹ, khẳng định rằng mẹ xứng đáng có những điều tốt đẹp và không nên đặt hạnh phúc của mình chỉ vào người khác. Đoạn video của Wang đã thu hút sự chú ý lớn từ cư dân mạng nhờ quan điểm sâu sắc và tâm lý của cậu.",
-    "link": "https://dantri.com.vn/giao-duc/me-phai-yeu-minh-truoc-khi-yeu-bo-va-con-nam-sinh-gay-sot-vi-qua-tam-ly-20250319144711029.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
     "importance": 8,
-    "question": "Lời nhắn của Wang Nanhao dành cho mẹ là gì?",
+    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
     "answers": [
       {
-        "text": "Mẹ phải yêu mình, trước khi yêu bố và con",
+        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
         "correct": true
       },
       {
-        "text": "Mẹ nên tiết kiệm tiền cho gia đình hơn",
+        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
         "correct": false
       },
       {
-        "text": "Mẹ không cần phải mua đồ cho bản thân",
+        "text": "Không cần học thêm gì",
         "correct": false
       },
       {
-        "text": "Mẹ hãy quên đi sở thích cá nhân",
+        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
         "correct": false
       },
       {
-        "text": "Mẹ hãy chăm sóc bố nhiều hơn",
+        "text": "Từ bỏ mọi cơ hội trong công việc",
         "correct": false
       }
     ]
@@ -666,6 +662,37 @@
     ]
   },
   {
+    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
+    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
+    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
+    "answers": [
+      {
+        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
+        "correct": true
+      },
+      {
+        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
+        "correct": false
+      },
+      {
+        "text": "IU chuẩn bị ra mắt album mới",
+        "correct": false
+      },
+      {
+        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
+        "correct": false
+      },
+      {
+        "text": "Tất cả các diễn viên đều nghỉ hưu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
     "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
     "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
@@ -693,32 +720,32 @@
     ]
   },
   {
-    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
-    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
-    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
-    "cat": "thoi-su",
-    "positivity": 7,
+    "title": "\"Mẹ phải yêu mình, trước khi yêu bố và con\": Nam sinh gây sốt vì quá tâm lý",
+    "content": "Nam sinh Wang Nanhao (16 tuổi) từ Ninh Ba, Trung Quốc, đã gây sốt trên mạng với thông điệp khuyến khích mẹ yêu bản thân trước khi yêu thương chồng và con cái. Wang nhận thấy mẹ thường hy sinh nhu cầu cá nhân để lo cho gia đình và khuyên bà nên ưu tiên chăm sóc bản thân hơn. Cậu cũng chia sẻ về những ký ức đẹp khi học đàn cùng mẹ, khẳng định rằng mẹ xứng đáng có những điều tốt đẹp và không nên đặt hạnh phúc của mình chỉ vào người khác. Đoạn video của Wang đã thu hút sự chú ý lớn từ cư dân mạng nhờ quan điểm sâu sắc và tâm lý của cậu.",
+    "link": "https://dantri.com.vn/giao-duc/me-phai-yeu-minh-truoc-khi-yeu-bo-va-con-nam-sinh-gay-sot-vi-qua-tam-ly-20250319144711029.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
     "importance": 8,
-    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
+    "question": "Lời nhắn của Wang Nanhao dành cho mẹ là gì?",
     "answers": [
       {
-        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
+        "text": "Mẹ phải yêu mình, trước khi yêu bố và con",
         "correct": true
       },
       {
-        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
+        "text": "Mẹ nên tiết kiệm tiền cho gia đình hơn",
         "correct": false
       },
       {
-        "text": "Không cần học thêm gì",
+        "text": "Mẹ không cần phải mua đồ cho bản thân",
         "correct": false
       },
       {
-        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
+        "text": "Mẹ hãy quên đi sở thích cá nhân",
         "correct": false
       },
       {
-        "text": "Từ bỏ mọi cơ hội trong công việc",
+        "text": "Mẹ hãy chăm sóc bố nhiều hơn",
         "correct": false
       }
     ]
@@ -809,6 +836,33 @@
     ]
   },
   {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -858,33 +912,6 @@
       },
       {
         "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
-    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
-    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
-    "answers": [
-      {
-        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
         "correct": false
       }
     ]
