--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ca cao Việt Nam hồi sinh nhờ kinh tế tuần hoàn",
+    "content": "Cây ca cao tại Đắk Lắk và Đắk Nông đang hồi sinh nhờ áp dụng mô hình kinh tế tuần hoàn, với sự hỗ trợ từ Liên minh châu Âu (EU). Giá ca cao đã tăng mạnh, giúp nông dân cải thiện thu nhập và đời sống. Dự án \"Kinh tế tuần hoàn trong sản xuất ca cao\" của EU đã cung cấp kỹ thuật và đào tạo cho nông dân, tạo ra sản phẩm ca cao chất lượng cao và bền vững. Việt Nam được đánh giá là hình mẫu trong việc phát triển mô hình này và có tiềm năng mở rộng sản xuất ca cao ra các thị trường quốc tế.",
+    "link": "https://tuoitre.vn/ca-cao-viet-nam-hoi-sinh-nho-kinh-te-tuan-hoan-20250320234845253.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Mô hình nào đã giúp cây ca cao tại Đắk Lắk và Đắk Nông hồi sinh?",
+    "answers": [
+      {
+        "text": "Kinh tế tuần hoàn",
+        "correct": true
+      },
+      {
+        "text": "Kinh tế thị trường tự do",
+        "correct": false
+      },
+      {
+        "text": "Nông nghiệp hữu cơ",
+        "correct": false
+      },
+      {
+        "text": "Nông nghiệp công nghệ cao",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Shipper 'bọt bèo' trong thời thương mại điện tử",
     "content": "Bài viết phản ánh thực trạng khó khăn của các tài xế giao hàng (shipper) trong lĩnh vực thương mại điện tử tại Việt Nam, khi họ chủ yếu nhận thù lao thấp và không có hợp đồng lao động chính thức. Nhiều shipper làm việc mà không có bảo hiểm hay các phúc lợi xã hội, khiến họ phải đối mặt với nhiều rủi ro trong công việc. Dù có một số nghiệp đoàn được thành lập để hỗ trợ, nhưng các quyền lợi của họ vẫn chưa được bảo vệ một cách hiệu quả, dẫn đến tình trạng bấp bênh trong nghề nghiệp.",
     "link": "https://tuoitre.vn/shipper-bot-beo-trong-thoi-thuong-mai-dien-tu-20250316153717076.htm",
@@ -170,6 +197,33 @@
       },
       {
         "text": "Họ không phải làm việc nhiều giờ mỗi ngày.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
+    "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
+    "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Hồ Hạnh Nhi phản ứng ra sao trước vụ lùm xùm chồng ôm gái lạ?",
+    "answers": [
+      {
+        "text": "Cô giữ im lặng và tập trung vào công việc và chăm sóc các con.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã lên tiếng chỉ trích chồng.",
+        "correct": false
+      },
+      {
+        "text": "Cô yêu cầu chồng xin lỗi công chúng.",
+        "correct": false
+      },
+      {
+        "text": "Cô tổ chức một buổi họp báo để giải thích sự việc.",
         "correct": false
       }
     ]
@@ -658,32 +712,32 @@
     ]
   },
   {
-    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
-    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
-    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
-    "cat": "giai-tri",
+    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
+    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
+    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
+    "cat": "thoi-su",
     "positivity": 7,
-    "importance": 6,
-    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
+    "importance": 8,
+    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
     "answers": [
       {
-        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
+        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
         "correct": true
       },
       {
-        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
+        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
         "correct": false
       },
       {
-        "text": "IU chuẩn bị ra mắt album mới",
+        "text": "Không cần học thêm gì",
         "correct": false
       },
       {
-        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
+        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
         "correct": false
       },
       {
-        "text": "Tất cả các diễn viên đều nghỉ hưu",
+        "text": "Từ bỏ mọi cơ hội trong công việc",
         "correct": false
       }
     ]
@@ -747,32 +801,32 @@
     ]
   },
   {
-    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
-    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
-    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
-    "cat": "thoi-su",
+    "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
+    "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
+    "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
+    "cat": "giai-tri",
     "positivity": 7,
-    "importance": 8,
-    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
+    "importance": 6,
+    "question": "Tình hình hiện tại của các mỹ nhân Hàn Quốc liên quan đến Kim Soo Hyun ra sao?",
     "answers": [
       {
-        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
+        "text": "Kim Ji Won đang thăng hoa trong sự nghiệp",
         "correct": true
       },
       {
-        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
+        "text": "Seo Ye Ji đã ký nhiều hợp đồng quảng cáo",
         "correct": false
       },
       {
-        "text": "Không cần học thêm gì",
+        "text": "IU chuẩn bị ra mắt album mới",
         "correct": false
       },
       {
-        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
+        "text": "Bae Suzy bị chỉ trích vì tin đồn hẹn hò",
         "correct": false
       },
       {
-        "text": "Từ bỏ mọi cơ hội trong công việc",
+        "text": "Tất cả các diễn viên đều nghỉ hưu",
         "correct": false
       }
     ]
@@ -863,6 +917,33 @@
     ]
   },
   {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -912,33 +993,6 @@
       },
       {
         "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
-    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
-    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
-    "answers": [
-      {
-        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
         "correct": false
       }
     ]
@@ -2962,33 +3016,6 @@
     ]
   },
   {
-    "title": "Viêm xoang có lây không?",
-    "content": "Viêm xoang là tình trạng viêm các xoang cạnh mũi không phải là bệnh truyền nhiễm, do đó không lây từ người này sang người khác. Tuy nhiên, sống chung với người bị viêm xoang trong giai đoạn cấp tính có thể làm tăng nguy cơ lây nhiễm các tác nhân gây bệnh như virus hoặc vi khuẩn qua đường hô hấp. Để giảm nguy cơ nhiễm trùng, nên thực hiện các biện pháp phòng ngừa như rửa tay thường xuyên và tránh dùng chung đồ dùng cá nhân.",
-    "link": "https://vnexpress.net/viem-xoang-co-lay-khong-4863754.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có lây từ người sang người không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không lây từ người sang người.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang rất dễ lây.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ lây qua đường tình dục.",
-        "correct": false
-      },
-      {
-        "text": "Có thể lây qua nước uống.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
     "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
     "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
@@ -3038,6 +3065,33 @@
       },
       {
         "text": "Thiếu hụt hormone",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Viêm xoang có lây không?",
+    "content": "Viêm xoang là tình trạng viêm các xoang cạnh mũi không phải là bệnh truyền nhiễm, do đó không lây từ người này sang người khác. Tuy nhiên, sống chung với người bị viêm xoang trong giai đoạn cấp tính có thể làm tăng nguy cơ lây nhiễm các tác nhân gây bệnh như virus hoặc vi khuẩn qua đường hô hấp. Để giảm nguy cơ nhiễm trùng, nên thực hiện các biện pháp phòng ngừa như rửa tay thường xuyên và tránh dùng chung đồ dùng cá nhân.",
+    "link": "https://vnexpress.net/viem-xoang-co-lay-khong-4863754.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có lây từ người sang người không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không lây từ người sang người.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang rất dễ lây.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ lây qua đường tình dục.",
+        "correct": false
+      },
+      {
+        "text": "Có thể lây qua nước uống.",
         "correct": false
       }
     ]
@@ -3267,37 +3321,6 @@
     ]
   },
   {
-    "title": "Học sinh ứng dụng công nghệ khai thác \"kho vàng\" dưới tán rừng",
-    "content": "Nhóm học sinh tại Nghệ An đã phát triển một dự án khởi nghiệp ứng dụng công nghệ Blockchain và tiêu chuẩn GACP-WHO để khai thác nguồn dược liệu phong phú dưới tán rừng, được xem như \"kho vàng\" chưa được khai thác. Dự án không chỉ giúp minh bạch nguồn gốc dược liệu mà còn nâng cao giá trị sản phẩm và tạo sinh kế bền vững cho cộng đồng dân tộc thiểu số. Nhóm học sinh đã xuất sắc vượt qua vòng bán kết trong cuộc thi \"Học sinh, sinh viên với ý tưởng khởi nghiệp\" của Bộ Giáo dục và Đào tạo, góp phần bảo vệ môi trường và nâng cao nhận thức xã hội.",
-    "link": "https://dantri.com.vn/giao-duc/hoc-sinh-ung-dung-cong-nghe-khai-thac-kho-vang-duoi-tan-rung-20250320080413977.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Dự án của nhóm học sinh Nghệ An ứng dụng công nghệ gì để khai thác dược liệu dưới tán rừng?",
-    "answers": [
-      {
-        "text": "Blockchain",
-        "correct": true
-      },
-      {
-        "text": "AI",
-        "correct": false
-      },
-      {
-        "text": "IoT",
-        "correct": false
-      },
-      {
-        "text": "Big Data",
-        "correct": false
-      },
-      {
-        "text": "Cloud Computing",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân gây tăng đường huyết sau ăn",
     "content": "Sau khi ăn, lượng đường huyết tăng lên là điều bình thường do cơ thể phân hủy carbohydrate thành glucose. Tuy nhiên, việc ăn nhiều tinh bột, thực phẩm chế biến sẵn và không kiểm soát khẩu phần có thể dẫn đến tăng đường huyết đột ngột. Người bị tiểu đường cần chú ý đến thói quen ăn uống như chia nhỏ bữa ăn, chọn thực phẩm giàu chất xơ và kiểm soát lượng carbohydrate để duy trì mức đường huyết ổn định.",
     "link": "https://vnexpress.net/nguyen-nhan-gay-tang-duong-huyet-sau-an-4863701.html",
@@ -3324,6 +3347,37 @@
       },
       {
         "text": "Vận động ngay sau khi ăn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Học sinh ứng dụng công nghệ khai thác \"kho vàng\" dưới tán rừng",
+    "content": "Nhóm học sinh tại Nghệ An đã phát triển một dự án khởi nghiệp ứng dụng công nghệ Blockchain và tiêu chuẩn GACP-WHO để khai thác nguồn dược liệu phong phú dưới tán rừng, được xem như \"kho vàng\" chưa được khai thác. Dự án không chỉ giúp minh bạch nguồn gốc dược liệu mà còn nâng cao giá trị sản phẩm và tạo sinh kế bền vững cho cộng đồng dân tộc thiểu số. Nhóm học sinh đã xuất sắc vượt qua vòng bán kết trong cuộc thi \"Học sinh, sinh viên với ý tưởng khởi nghiệp\" của Bộ Giáo dục và Đào tạo, góp phần bảo vệ môi trường và nâng cao nhận thức xã hội.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-sinh-ung-dung-cong-nghe-khai-thac-kho-vang-duoi-tan-rung-20250320080413977.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Dự án của nhóm học sinh Nghệ An ứng dụng công nghệ gì để khai thác dược liệu dưới tán rừng?",
+    "answers": [
+      {
+        "text": "Blockchain",
+        "correct": true
+      },
+      {
+        "text": "AI",
+        "correct": false
+      },
+      {
+        "text": "IoT",
+        "correct": false
+      },
+      {
+        "text": "Big Data",
+        "correct": false
+      },
+      {
+        "text": "Cloud Computing",
         "correct": false
       }
     ]
