Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "4 kiểu người hướng nội",
+    "content": "Bài viết giới thiệu bốn kiểu người hướng nội, bao gồm người hướng nội xã hội, người hướng nội suy nghĩ, người hướng nội lo âu và người hướng nội kiềm chế. Mỗi kiểu người đều có những đặc điểm riêng và cách họ tương tác với xã hội khác nhau. Các chuyên gia tâm lý đưa ra lời khuyên cho từng kiểu người để họ có thể cải thiện kỹ năng giao tiếp và tìm kiếm sự cân bằng trong cuộc sống.",
+    "link": "https://vnexpress.net/4-kieu-nguoi-huong-noi-4861837.html",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Có mấy kiểu người hướng nội được đề cập trong bài viết?",
+    "answers": [
+      {
+        "text": "Bốn kiểu",
+        "correct": true
+      },
+      {
+        "text": "Hai kiểu",
+        "correct": false
+      },
+      {
+        "text": "Ba kiểu",
+        "correct": false
+      },
+      {
+        "text": "Năm kiểu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ca cao Việt Nam hồi sinh nhờ kinh tế tuần hoàn",
     "content": "Cây ca cao tại Đắk Lắk và Đắk Nông đang hồi sinh nhờ áp dụng mô hình kinh tế tuần hoàn, với sự hỗ trợ từ Liên minh châu Âu (EU). Giá ca cao đã tăng mạnh, giúp nông dân cải thiện thu nhập và đời sống. Dự án \"Kinh tế tuần hoàn trong sản xuất ca cao\" của EU đã cung cấp kỹ thuật và đào tạo cho nông dân, tạo ra sản phẩm ca cao chất lượng cao và bền vững. Việt Nam được đánh giá là hình mẫu trong việc phát triển mô hình này và có tiềm năng mở rộng sản xuất ca cao ra các thị trường quốc tế.",
     "link": "https://tuoitre.vn/ca-cao-viet-nam-hoi-sinh-nho-kinh-te-tuan-hoan-20250320234845253.htm",
@@ -202,28 +229,28 @@
     ]
   },
   {
-    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
-    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
-    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
-    "cat": "suc-khoe",
+    "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
+    "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
+    "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
+    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 8,
-    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
+    "importance": 7,
+    "question": "Hồ Hạnh Nhi phản ứng ra sao trước vụ lùm xùm chồng ôm gái lạ?",
     "answers": [
       {
-        "text": "Hẹp eo động mạch chủ",
+        "text": "Cô giữ im lặng và tập trung vào công việc và chăm sóc các con.",
         "correct": true
       },
       {
-        "text": "Bệnh van tim ba mảnh",
+        "text": "Cô đã lên tiếng chỉ trích chồng.",
         "correct": false
       },
       {
-        "text": "Tăng huyết áp nguyên phát",
+        "text": "Cô yêu cầu chồng xin lỗi công chúng.",
         "correct": false
       },
       {
-        "text": "Bệnh mạch vành",
+        "text": "Cô tổ chức một buổi họp báo để giải thích sự việc.",
         "correct": false
       }
     ]
@@ -251,6 +278,33 @@
       },
       {
         "text": "Để trẻ không bị sốt khi mắc bệnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
+    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
+    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
+    "answers": [
+      {
+        "text": "Hẹp eo động mạch chủ",
+        "correct": true
+      },
+      {
+        "text": "Bệnh van tim ba mảnh",
+        "correct": false
+      },
+      {
+        "text": "Tăng huyết áp nguyên phát",
+        "correct": false
+      },
+      {
+        "text": "Bệnh mạch vành",
         "correct": false
       }
     ]
@@ -287,33 +341,6 @@
     ]
   },
   {
-    "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
-    "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
-    "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Hồ Hạnh Nhi phản ứng ra sao trước vụ lùm xùm chồng ôm gái lạ?",
-    "answers": [
-      {
-        "text": "Cô giữ im lặng và tập trung vào công việc và chăm sóc các con.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã lên tiếng chỉ trích chồng.",
-        "correct": false
-      },
-      {
-        "text": "Cô yêu cầu chồng xin lỗi công chúng.",
-        "correct": false
-      },
-      {
-        "text": "Cô tổ chức một buổi họp báo để giải thích sự việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ trục xuất cầu thủ xăm biểu tượng Real Madrid",
     "content": "Cầu thủ bóng đá Jerce Reyes Barrios, 26 tuổi, đã bị trục xuất khỏi Mỹ do bị cáo buộc là thành viên băng đảng bạo lực, liên quan đến hình xăm biểu tượng Real Madrid của anh. Dù đã có phiên điều trần về nhập cư, anh cùng hơn 200 người khác đã bị đưa về El Salvador vào ngày 15/3/2025. Luật sư của Barrios khẳng định hình xăm của anh chỉ mang ý nghĩa bóng đá và gia đình, không liên quan đến băng đảng. Quyết định trục xuất này đã gây ra nhiều tranh cãi và phản đối từ gia đình và luật sư của anh.",
     "link": "https://vnexpress.net/my-truc-xuat-cau-thu-xam-bieu-tuong-real-madrid-4863991.html",
@@ -341,33 +368,6 @@
     ]
   },
   {
-    "title": "Xe tải đâm nhau, hai người chết",
-    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
-    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
-    "answers": [
-      {
-        "text": "Hai người tử vong",
-        "correct": true
-      },
-      {
-        "text": "Xe tải bị hư hỏng",
-        "correct": false
-      },
-      {
-        "text": "Có nhiều người bị thương",
-        "correct": false
-      },
-      {
-        "text": "Tài xế bị phạt tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đâm đuôi xe tải, hai người tử vong",
     "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
     "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
@@ -390,6 +390,33 @@
       },
       {
         "text": "Vì xe tải chạy quá tốc độ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe tải đâm nhau, hai người chết",
+    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
+    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
+    "answers": [
+      {
+        "text": "Hai người tử vong",
+        "correct": true
+      },
+      {
+        "text": "Xe tải bị hư hỏng",
+        "correct": false
+      },
+      {
+        "text": "Có nhiều người bị thương",
+        "correct": false
+      },
+      {
+        "text": "Tài xế bị phạt tiền",
         "correct": false
       }
     ]
@@ -1002,33 +1029,6 @@
     ]
   },
   {
-    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
-    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
-    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
-    "answers": [
-      {
-        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -1078,6 +1078,33 @@
       },
       {
         "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
         "correct": false
       }
     ]
