--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -552,6 +552,33 @@
     ]
   },
   {
+    "title": "Công bố quy chế tuyển sinh đại học năm 2025: Nhiều điểm mới",
+    "content": "Bộ GD&ĐT đã công bố quy chế tuyển sinh đại học và cao đẳng năm 2025 với nhiều điểm mới đáng chú ý. Trong đó, quy định bỏ xét tuyển sớm và yêu cầu các trường công khai quy tắc quy đổi điểm trúng tuyển giữa các phương thức. Thí sinh sẽ không còn phải chọn mã phương thức xét tuyển, và từ năm 2025, không giới hạn số lượng tổ hợp xét tuyển, nhưng mỗi tổ hợp phải đảm bảo tối thiểu ba môn phù hợp.",
+    "link": "https://dantri.com.vn/giao-duc/cong-bo-quy-che-tuyen-sinh-dai-hoc-nam-2025-nhieu-diem-moi-20250120163417371.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Có những điểm mới nào trong quy chế tuyển sinh đại học năm 2025?",
+    "answers": [
+      {
+        "text": "Bỏ xét tuyển sớm và công khai quy tắc quy đổi điểm trúng tuyển.",
+        "correct": true
+      },
+      {
+        "text": "Công nhận điểm học bạ cao hơn điểm thi tốt nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Giới hạn số lượng tổ hợp xét tuyển về 4 tổ hợp.",
+        "correct": false
+      },
+      {
+        "text": "Tăng chỉ tiêu xét tuyển sớm lên 30%.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công viên ở Hà Nội được phá rào, chỉnh trang",
     "content": "Công viên Thống Nhất tại Hà Nội đã bắt đầu quá trình cải tạo và phá dỡ hàng rào để tạo không gian mở cho người dân. Việc này diễn ra từ ngày 17/3, với hơn 650 m hàng rào được tháo dỡ nhằm không thu phí tham quan. Dự kiến, việc cải tạo công viên sẽ hoàn thành vào dịp 30/4 với tổng đầu tư hơn 14 tỷ đồng. Tương tự, công viên Cầu Giấy cũng đã hoàn tất việc phá dỡ hàng rào và sẽ được nâng cấp với nhiều tiện ích mới.",
     "link": "https://vnexpress.net/cong-vien-o-ha-noi-duoc-pha-rao-chinh-trang-4863911.html",
@@ -3532,28 +3559,28 @@
     ]
   },
   {
-    "title": "10 năm không con do dính buồng tử cung",
-    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
-    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
-    "cat": "suc-khoe",
+    "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
+    "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
+    "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
+    "cat": "du-lich",
     "positivity": 8,
-    "importance": 9,
-    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
+    "importance": 7,
+    "question": "Vietjet vừa khai trương đường bay mới nào đến Ấn Độ?",
     "answers": [
       {
-        "text": "Dính buồng tử cung",
+        "text": "TP.HCM - Hyderabad và TP.HCM - Bengaluru",
         "correct": true
       },
       {
-        "text": "Vô sinh do tuổi tác",
+        "text": "TP.HCM - New Delhi và TP.HCM - Mumbai",
         "correct": false
       },
       {
-        "text": "Bệnh lý di truyền",
+        "text": "Đà Nẵng - Bengaluru và Đà Nẵng - Hyderabad",
         "correct": false
       },
       {
-        "text": "Thiếu hụt hormone",
+        "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
         "correct": false
       }
     ]
@@ -3586,28 +3613,28 @@
     ]
   },
   {
-    "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
-    "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
-    "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
-    "cat": "du-lich",
+    "title": "10 năm không con do dính buồng tử cung",
+    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
+    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 7,
-    "question": "Vietjet vừa khai trương đường bay mới nào đến Ấn Độ?",
+    "importance": 9,
+    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
     "answers": [
       {
-        "text": "TP.HCM - Hyderabad và TP.HCM - Bengaluru",
+        "text": "Dính buồng tử cung",
         "correct": true
       },
       {
-        "text": "TP.HCM - New Delhi và TP.HCM - Mumbai",
+        "text": "Vô sinh do tuổi tác",
         "correct": false
       },
       {
-        "text": "Đà Nẵng - Bengaluru và Đà Nẵng - Hyderabad",
+        "text": "Bệnh lý di truyền",
         "correct": false
       },
       {
-        "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
+        "text": "Thiếu hụt hormone",
         "correct": false
       }
     ]
@@ -4324,33 +4351,6 @@
     ]
   },
   {
-    "title": "Đột quỵ ở trẻ em",
-    "content": "Đột quỵ ở trẻ em là một tình trạng hiếm gặp nhưng có thể gây ra hậu quả nghiêm trọng hơn so với người lớn. Nguyên nhân chủ yếu của đột quỵ ở trẻ em thường liên quan đến các yếu tố bẩm sinh như khuyết tật tim, bệnh lý về tim mạch và rối loạn đông máu. Triệu chứng của đột quỵ ở trẻ em tương tự như ở người lớn, nhưng việc phát hiện sớm có thể khó khăn do trẻ nhỏ không thể diễn đạt cảm giác. Các biện pháp cấp cứu và điều trị kịp thời là rất quan trọng để giảm thiểu di chứng và nâng cao chất lượng sống cho trẻ.",
-    "link": "https://vnexpress.net/dot-quy-o-tre-em-4863558.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Đột quỵ ở trẻ em có nguy hiểm không?",
-    "answers": [
-      {
-        "text": "Có, đột quỵ ở trẻ em có thể gây ra hậu quả nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Đột quỵ ở trẻ em là một tình trạng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Đột quỵ chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Trẻ em không bao giờ bị đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điểm khác thường của Hoàng Thùy Linh khi trở lại sau thời gian \"ở ẩn\"",
     "content": "Hoàng Thùy Linh vừa trở lại sau thời gian dài 'ở ẩn' và nhận được nhiều lời khen ngợi về nhan sắc mặn mà và phong cách ăn mặc mới. Cô tham gia vào các buổi giao lưu với khán giả và phát hành phim tài liệu 'Vietnamese concert: Chúng ta là người Việt Nam'. Trong lần tái xuất này, nữ ca sĩ chọn những bộ trang phục suông rộng, khác hẳn với phong cách gợi cảm trước đây, thể hiện sự thay đổi trong hình ảnh của mình.",
     "link": "https://dantri.com.vn/giai-tri/diem-khac-thuong-cua-hoang-thuy-linh-khi-tro-lai-sau-thoi-gian-o-an-20250320082134475.htm",
@@ -4373,6 +4373,33 @@
       },
       {
         "text": "Cô thường xuyên mặc đồ thể thao.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đột quỵ ở trẻ em",
+    "content": "Đột quỵ ở trẻ em là một tình trạng hiếm gặp nhưng có thể gây ra hậu quả nghiêm trọng hơn so với người lớn. Nguyên nhân chủ yếu của đột quỵ ở trẻ em thường liên quan đến các yếu tố bẩm sinh như khuyết tật tim, bệnh lý về tim mạch và rối loạn đông máu. Triệu chứng của đột quỵ ở trẻ em tương tự như ở người lớn, nhưng việc phát hiện sớm có thể khó khăn do trẻ nhỏ không thể diễn đạt cảm giác. Các biện pháp cấp cứu và điều trị kịp thời là rất quan trọng để giảm thiểu di chứng và nâng cao chất lượng sống cho trẻ.",
+    "link": "https://vnexpress.net/dot-quy-o-tre-em-4863558.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Đột quỵ ở trẻ em có nguy hiểm không?",
+    "answers": [
+      {
+        "text": "Có, đột quỵ ở trẻ em có thể gây ra hậu quả nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Đột quỵ ở trẻ em là một tình trạng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Đột quỵ chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Trẻ em không bao giờ bị đột quỵ.",
         "correct": false
       }
     ]
@@ -5045,87 +5072,6 @@
       },
       {
         "text": "Vì không hoàn thành nghĩa vụ tài chính.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
-    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
-    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
-    "answers": [
-      {
-        "text": "Nghịch vòi nước nóng lạnh",
-        "correct": true
-      },
-      {
-        "text": "Chơi với lửa",
-        "correct": false
-      },
-      {
-        "text": "Ngã vào bếp",
-        "correct": false
-      },
-      {
-        "text": "Ngồi gần bếp lửa",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chuyển làn trên đường cao tốc thế nào cho an toàn",
-    "content": "Khi lái xe trên đường cao tốc, việc chuyển làn an toàn là rất quan trọng và cần phải thực hiện đúng cách. Tài xế cần kiểm tra gương chiếu hậu và điểm mù trước khi chuyển làn, đồng thời sử dụng tín hiệu để báo hiệu ý định của mình. Khi đã đảm bảo an toàn, hãy chuyển làn từ từ và giữ khoảng cách với các xe xung quanh để tránh tai nạn.",
-    "link": "https://vnexpress.net/chuyen-lan-tren-duong-cao-toc-the-nao-cho-an-toan-4862664.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để chuyển làn trên đường cao tốc một cách an toàn?",
-    "answers": [
-      {
-        "text": "Kiểm tra gương và sử dụng tín hiệu trước khi chuyển làn",
-        "correct": true
-      },
-      {
-        "text": "Chuyển làn ngay mà không cần kiểm tra",
-        "correct": false
-      },
-      {
-        "text": "Chạy nhanh hơn khi chuyển làn",
-        "correct": false
-      },
-      {
-        "text": "Không cần dùng tín hiệu khi chuyển làn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mổ cắt u ung thư kết hợp tái tạo ngực",
-    "content": "Bà Loan, 48 tuổi, đã được phẫu thuật cắt u ung thư vú kết hợp với tái tạo ngực tại Bệnh viện Đa khoa Tâm Anh Hà Nội. Bác sĩ đã thực hiện phẫu thuật bảo tồn vú nhằm loại bỏ khối u mà vẫn giữ lại phần lớn tuyến vú, đồng thời đặt túi ngực tạo hình thẩm mỹ. Phương pháp phẫu thuật \"một thì\" này giúp giảm thiểu thời gian điều trị và tăng cường hiệu quả điều trị cho bệnh nhân ung thư vú giai đoạn sớm.",
-    "link": "https://vnexpress.net/mo-cat-u-ung-thu-ket-hop-tai-tao-nguc-4863540.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Phương pháp phẫu thuật nào đã được áp dụng cho bà Loan để điều trị ung thư vú?",
-    "answers": [
-      {
-        "text": "Phẫu thuật cắt u ung thư kết hợp tái tạo ngực",
-        "correct": true
-      },
-      {
-        "text": "Phẫu thuật chỉ cắt u ung thư",
-        "correct": false
-      },
-      {
-        "text": "Phẫu thuật đặt túi ngực mà không cắt u",
-        "correct": false
-      },
-      {
-        "text": "Phẫu thuật hóa trị liệu",
         "correct": false
       }
     ]
